--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!--[if lt IE 9]>
         <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Bulwark Block Explorer</title>
+    <title>Noir Block Explorer</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" data-auto-replace-svg="nest"></script>
     <script>
